# Renate-talent

./: .env.production.example  .gitignore  DEPLOYMENT.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build.yml  ci.yml  lint.yml  test.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  conftest.py  pyproject.toml
backend/alembic/versions/: 001_create_tables.py  002_seed_data.py  003_update_industries.py  004_add_indexes.py
backend/app/: config.py  database.py  logging_config.py  main.py
backend/app/middleware/: auth.py  request_id.py  security.py
backend/app/models/: __init__.py  college.py  industry.py  submission.py
backend/app/routers/: colleges.py  health.py  industries.py  submissions.py
backend/app/schemas/: college.py  industry.py  submission.py
backend/app/services/: storage.py
backend/tests/: conftest.py  test_health.py  test_submissions.py
deploy/: backup.sh  setup.sh
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: FileUpload.tsx  FormError.tsx  SubmissionForm.tsx  SuccessCard.tsx
frontend/src/hooks/: useCollegesAndIndustries.ts
frontend/src/lib/: api.ts  types.ts  validation.ts
nginx/: Dockerfile  nginx.conf
postgres/: postgresql.conf
scripts/: backup-db.sh  deploy.sh
